File exclusion -- Ensure graceful fail when encountering unexpected user input